css/landingpage-max-1024.css
.navbar-brand {
    padding-top: 5px;
    height: 40px;
}

.nav-justified > li > a {
    text-align: left;
}

.techcrunch {
    width: 90vw;
}

#desktop-display-header {
    display: none;
}
.collapse {
    border: 0px;
}

#collapse-legalese,
#collapse-legalese:hover {
    font-family: "Alegreya", serif;
    font-size: 16px;
    color: #333333;
    text-decoration: none;
    padding-top: 7px;
    display: inline-block;
    letter-spacing: 2px;
}

.legalese-nav.justify-content-center {
    justify-content: space-between!important;
}

#top-bar {
    display: block;
}

.top-justify {
    display: block;
}

.row.text-center.black-rec > h2 {
    font-size: 16px;
}

.row.text-center.black-rec > p {
    font-size: 12px;
    padding: 0px 10px;
}

.navbar-collapse {
    background-color: white;
}

.blurb-nav > li {
    width: 100%;
}

#statusquo, #investornotice, #players {
    padding-top: 0px;
}

.blurb-spacing {
    line-height: 2.5rem;
}

.bot-squeeze {
    width: 80%;
    padding: 0 0 0 14px;
}

.bot-container {
    margin-top: 50px;
}

#first-bottom {
    margin-left: 0px;
    padding-top: 10px;
}

#bot-legalese-col {
    width: 100%;
    padding-right: 10px;
}

h2 {
    text-align: center;
}

.left-menu {
    position: relative;
    text-align: center;
}

.modal-dialog {
    max-width: 90vw;
    margin: 0 auto;
}

.modal-content {
    max-width: 90vw;
    margin: 0 auto;
}

.pricing-feature-cols {
    min-width: 0px;
}

.pricing-feature-cols-long {
    min-width: 0px;
}

.pricing-logo-docs {
    height: 200px;
    position: absolute;
    right: 25%;
    top: 40px;
}

.small-centre {
    text-align: center;
}

ul.li-inline li { display: block; line-height: 1.5em }
ul.li-inline li::before {
    content: "//";
    position:relative;
    vertical-align: center;
    margin-right: 6pt;
    margin-left: 4pt;
}

.a-link {
    display: inline;
}

#media-logo {
    left: 50%;
}

.media-menu {
    text-align: center;
}

.active-media-link {
    transform: none;
    padding: 20px;
}

.left-media-col {
    text-align: center;
    padding-right: 0px;
}

.hidden-white {
    display: none;
}

.small-block {
    display: block;
    text-align: center;
}

#hq-img {
    margin-left: 0;
}

.founded-block {
    margin-top: 20px;
}


.dropdown-menu {
    display: block;
    left: 0;
    transform: translateX(0px);
    box-shadow: none;
    padding: 0;
}

.top-subtitle {
    text-align: left;
    padding: 0;
}

.dropdown.nav-item {
    margin: 20px;
}

#sidebarMenu {
    height: 120vh;
    position: fixed;
    left: 0;
    width: 250px;
    margin-top: 40px;
    background-color: white;
    transform: translateX(-250px);
    transition: transform 250ms ease-in-out;
    z-index: 99999;
}

.sidebarMenuInner{
    margin:0;
    padding:0;
    border-top: 1px solid rgba(0, 0, 0, 0.10);
}

.sidebarMenuInner > li {
    list-style: none;
    color: #333;
    font-weight: bold;
    padding: 20px;
    cursor: pointer;
    border-bottom: 1px solid rgba(0, 0, 0, 0.10);
}

.sidebarMenuInner li {
    list-style: none;
}

.sidebar-sublist {
    padding-inline-start: 0
}    

#sidebarMenu.toggled {
    transform: translateX(0px);
}

.sidebarIconToggle {
    transition: all 0.3s;
    box-sizing: border-box;
    cursor: pointer;
    position: absolute;
    z-index: 99;
    height: 100%;
    width: 100%;
    top: 12px;
    left: 10px;
    height: 22px;
    width: 22px;
}

.spinner {
    transition: all 0.3s;
    box-sizing: border-box;
    position: absolute;
    height: 3px;
    width: 100%;
    background-color: #333;
}

.horizontal {
    transition: all 0.3s;
    box-sizing: border-box;
    position: relative;
    float: left;
    margin-top: 3px;
}

.diagonal.part-1 {
    position: relative;
    transition: all 0.3s;
    box-sizing: border-box;
    float: left;
}

.diagonal.part-2 {
    transition: all 0.3s;
    box-sizing: border-box;
    position: relative;
    float: left;
    margin-top: 3px;
}

.horizontal.animate {
    transition: all 0.3s;
    box-sizing: border-box;
    opacity: 0;
}

.diagonal.part-1.animate {
    transition: all 0.3s;
    box-sizing: border-box;
    transform: rotate(135deg);
    margin-top: 8px;
}

.diagonal.part-2.animate {
    transition: all 0.3s;
    box-sizing: border-box;
    transform: rotate(-135deg);
    margin-top: -9px;
}

.sidebar-title {
    display: block;
    padding-left: 20px;
}

.highlight-row-purple {
    padding-top: 10px;
}

.small-navbar {
    display: block;
    margin: 0 auto;
    width: 100%;
    max-width: 100%;
    box-shadow: 0px 3px 3px rgba(150,150,150,0.2);
    background-color: white;
    position: fixed;
    height: 40px!important;
    overflow: hidden;
    z-index: 10;
    top: 0;
}

#second-container {
    padding-top: 50px;
}

.flipcard {
    margin-top: 20px;
}

.flipcard-links {
    text-align: center;
}

.name-col {
    padding-top: 20px;
}

.media-jumbo {
    padding-left: 10px;
    padding-right: 10px;
}

